# tgalaxy

./: .cproject  .project  AUTHORS  CMakeLists.txt  COPYING  Makefile.am  Makefile.in  Makefile.win  README  SConstruct  aclocal.m4  autogen.sh  configure.ac
src/: CMakeLists.txt  Makefile.am  Makefile.win  SConscript  alien.cpp  alienstates.cpp  defender.cpp  dispatcher.cpp  entitymanager.cpp  game.cpp  game_constants.cpp  gameobj.cpp  main.cpp  printer.cpp  projectile.cpp  star.cpp  world.cpp
src/include/: alien.h  alien_image.h  alienstates.h  defender.h  defender_image.h  dispatcher.h  entitymanager.h  explosion.h  font.h  game.h  gameobj.h  messagetypes.h  printer.h  projectile.h  projectile_image.h  star.h  state.h  statemachine.h  telegram.h  tgalaxy.h  timer.h  world.h
